name: fltkhs-demos
version: 0.0.0.1
synopsis: Extended FLTK demos
description:
  Extened FLTKHS demos moved to a separate package to keep the core package free of additional dependencies.
license: MIT
license-file: LICENSE
author: Aditya Siram
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-demos
-- bug-reports:
-- copyright:
category: UI,Graphics
build-type: Custom
cabal-version: >=1.20
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-demos

Executable fltkhs-threads
  Main-Is: threads.hs
  Hs-Source-Dirs: src/Examples
  Build-Depends:
     base == 4.*,
     fltkhs,
     stm
  default-language: Haskell2010
  ghc-Options: -Wall -threaded -fcontext-stack=220
  if !os(darwin)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"